# testyping

./: MakeDist.ps1  PORTABLE_README.txt  README.md
.github/workflows/: build-windows.yml
CandidateUI/: App.xaml  App.xaml.cs  CandidateWindow.xaml  CandidateWindow.xaml.cs  Program.cs  ScjWin11UI.csproj
CandidateUI/Models/: MessagesAndViewModel.cs
CandidateUI/Services/: ImePipeServer.cs
CandidateUI/Utils/: WindowStyles.cs
Engine/ScjTsfEngine/: CMakeLists.txt
Engine/ScjTsfEngine/include/: cin_table.h  class_factory.h  edit_sessions.h  guids.h  pipe_client.h  text_service.h
Engine/ScjTsfEngine/src/: cin_table.cpp  class_factory.cpp  dllmain.cpp  edit_sessions.cpp  guids.cpp  pipe_client.cpp  text_service.cpp
Engine/data/: scj6.cin
Launcher/: Program.cs  ScjLauncher.csproj
Shared/: TsfRegistration.cs
Uninstaller/: Program.cs  ScjUninstall.csproj
